// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseBulletHead 1`] = `
Array [
  Object {
    "str": "Hello ",
    "type": "text",
  },
  Object {
    "str": "#world",
    "type": "filtertag",
  },
  Object {
    "str": " !!! ",
    "type": "text",
  },
  Object {
    "str": "#Aa1",
    "type": "filtertag",
  },
  Object {
    "str": " // ",
    "type": "text",
  },
  Object {
    "str": "#Bb2",
    "type": "filtertag",
  },
  Object {
    "str": " ",
    "type": "text",
  },
  Object {
    "str": "|| ",
    "type": "text",
  },
  Object {
    "str": "#Cc3",
    "type": "new-hashtag",
  },
  Object {
    "str": "#Dd4",
    "type": "new-hashtag",
  },
]
`;

exports[`parseBulletHead 2`] = `
Array [
  Object {
    "str": "// ",
    "type": "text",
  },
  Object {
    "str": "#Cc3",
    "type": "filtertag",
  },
  Object {
    "str": " ",
    "type": "text",
  },
  Object {
    "str": "#Dd4",
    "type": "filtertag",
  },
]
`;

exports[`parseBulletHead 3`] = `
Array [
  Object {
    "str": "Hello ",
    "type": "text",
  },
  Object {
    "str": "#world",
    "type": "filtertag",
  },
  Object {
    "str": " !!! ",
    "type": "text",
  },
  Object {
    "choices": Array [
      "#A1",
      "#A2",
      "#A3",
    ],
    "str": "!((poll))(#A1 #A2 #A3)",
    "type": "new-poll",
  },
  Object {
    "str": " some text ... ",
    "type": "text",
  },
  Object {
    "choices": Array [
      "#Bb1",
      "#Bb2",
    ],
    "id": 123,
    "str": "!((poll:123))(#Bb1 #Bb2)",
    "type": "poll",
  },
]
`;
